--- a/src/styles/estilos.scss
+++ b/src/styles/estilos.scss
@@ -2,21 +2,42 @@
     background-color: rgb(209, 209, 209);
 
     h1{
+        color: #333333;
         display: unset;
         margin-left: 40%;
         text-align: center;
-       
         
     }
 
-    a{
-        img{
-            
-        }
+}
+    
+#atividades{
+    input{
+        width: 100%;
     }
+    background-color: rgb(192, 192, 192);
+    margin-left: 25%;
+    margin-top: 5%;
+    margin-right: 25%;
+    
 }
 
 #conteudo{
-    background-color: rgb(209, 209, 209);
+    button{
+        background-color: rgb(192, 192, 192);
+        border-radius: 5px;
+    }
+
+    #mensagem{
+        margin-top: 1%;
+        background-color: rgb(190, 190, 190);
+    }
+
+    .leituraDados{
+        background-color: rgb(190, 190, 190);
+    }
+    margin-left: 25%;
+    margin-top: 5%;
+    margin-right: 25%;
     width: 50%;
 }
